--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,9 @@
 /* This is my CSS File */
+
+body {
+    margin: 0 0 0 0;
+    border: 1px solid red;
+    background-color: pink;
+    color: #404040;
+
+}
