--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,115 @@
 /* This is my CSS File */
 
 body {
-    margin: 0 0 0 0;
-    border: 1px solid red;
-    background-color: pink;
+    background-color:lavender;
     color: #404040;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
 
 }
+
+header, footer {
+    width: 960px;
+    background:honeydew;
+    margin-left: auto;
+    padding: 20px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    border-bottom: 3px solid #cc0000;
+
+} 
+
+main {
+    width: 960px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 3px solid #cc0000;
+}
+
+h1,h2,h3,h4 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    border-left: 5px dotted #404040;
+    padding-left: 20px;
+}
+
+.site-title {
+    color:teal;
+}
+.intro {
+    padding: 10px;
+    background: #efefef;
+    font-size: 80%;
+
+}
+
+blockquote{
+    font-size: 75%;
+    text-align: center;
+}
+
+ul {
+    list-style-type: square;
+
+}
+
+ul li:nth-child(odd) {
+    background:aquamarine;
+}
+
+nav ul li:nth-child(odd) {
+    background: none;
+}
+
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a:link,
+nav ul li a:visited {
+    text-decoration: none;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+nav ul li a {
+    background: none;
+}
+
+nav ul li a:hover {
+    background: #990000;
+}
+
+nav ul li a:active {
+    background:lightgray;
+}
+
+nav ul li.current a:link,
+nav ul li.current a:visited {
+    opacity: .7;
+}
+
+#articletwo{
+background: #efefef;
+padding: 10px;
+font-size: 80%;
+}
+
+#my-image {
+    box-shadow: 0px 0px 2px 1px black;
+}
+
+
+
